# bindless_cg

./: .gitignore  CMakeLists.txt  Estructura.txt  README.md
assets/models/: Independent.mtl
dependencies/glad/: glad.h
include/: obj_loader.h
src/: app.cpp  glad.c  main.cpp  model.h  obj_loader.cpp  shader.cpp  shader.h  viewport.cpp  viewport.h
